--- a/CarMarketplace.Web/Views/Catalog/Result.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Result.cshtml
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-5">
                     <a asp-controller="SalePost" asp-action="Details" asp-route-id="@post.Id">
-                        <img src="@imageSrc" class="card-img" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
+                        <img src="@imageSrc" class="card-img-result" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
                     </a>
                 </div>
                 <div class="col">
