--- a/CarMarketplace.Web/Views/Seller/UserPosts.cshtml
+++ b/CarMarketplace.Web/Views/Seller/UserPosts.cshtml
@@ -27,7 +27,7 @@
 
                 <div class="col-md-4">
                     <div class="card mb-4 p-2">
-                        <img src="@imageSrc" class="card-img-top" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
+                        <img src="@imageSrc" class="card-img-catalog" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
                         <div class="card-body">
                             <h3 class="card-title"><strong>@post.Car.Make.Name @post.Car.Model.ModelName</strong></h3>
                             <hr>
