--- a/CarMarketplace.Web/Views/Catalog/Home.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Home.cshtml
@@ -30,7 +30,7 @@
     <div class="row">
         @foreach (var post in Model.Take(3))
         {
-            imageSrc = ViewData["CloudDomain"] + post.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).First();
+            imageSrc = ViewData["CloudDomain"] + post.ThumbnailImage;
             <div class="col-md-4">
                 <div class="card mb-4 p-2 shadow">
                     <a asp-controller="SalePost" asp-action="Details" asp-route-id="@post.Id" class="text-decoration-none">
@@ -69,14 +69,8 @@
                             var displacement = (post.Car.Engine.Displacement / 100).ToString().Insert(1, ".") + "l";
                         }
                         <span class="card-text fs-3 fst-italic">@displacement @post.Car.Engine.FuelType @post.Car.Engine.Horsepower<span>hp</span></span>
-                        <p class="card-text fs-3 fst-italic">
-                            @post.Car.Province.ProvinceName
-                            @if (post.Car.City != null)
-                            {
-                                <span class="fs-3">@post.Car.City</span>
-                            }
-                        </p>
-                        <span class="card-text fs-4 fst-italic">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
+                        <p class="card-text fs-3 fst-italic">@post.Seller.City.Province.ProvinceName, @post.Seller.City.CityName</p>
+                        <span class="card-text fs-4 fst-italic">@post.CreatedOn.ToString("HH:mm:ss dd/MM/yyyy")</span>
                         <br>
                     </div>
                 </div>
@@ -86,7 +80,7 @@
     <div class="row">
         @foreach (var post in Model.Skip(3).Take(3))
         {
-            imageSrc = ViewData["CloudDomain"] + post.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).First();
+            imageSrc = ViewData["CloudDomain"] + post.ThumbnailImage;
             <div class="col-md-4">
                 <div class="card mb-4 p-2 shadow">
                     <a asp-controller="SalePost" asp-action="Details" asp-route-id="@post.Id" class="text-decoration-none">
@@ -124,14 +118,8 @@
                             var displacement = (post.Car.Engine.Displacement / 100).ToString().Insert(1, ".") + "l";
                         }
                         <span class="card-text fs-3 fst-italic">@displacement @post.Car.Engine.FuelType @post.Car.Engine.Horsepower<span>hp</span></span>
-                        <p class="card-text fs-3 fst-italic">
-                            @post.Car.Province.ProvinceName
-                            @if (post.Car.City != null)
-                            {
-                                <span class="fs-3">@post.Car.City</span>
-                            }
-                        </p>
-                        <span class="card-text fs-4 fst-italic">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
+                        <p class="card-text fs-3 fst-italic">@post.Seller.City.Province.ProvinceName, @post.Seller.City.CityName</p>
+                        <span class="card-text fs-4 fst-italic">@post.CreatedOn.ToString("HH:mm:ss dd/MM/yyyy")</span>
                         <br>
                     </div>
                 </div>
