--- a/CarMarketplace.Web/Views/SalePost/Add.cshtml
+++ b/CarMarketplace.Web/Views/SalePost/Add.cshtml
@@ -7,13 +7,24 @@
 </div>
 <div class="container mt-5">
     <form enctype="multipart/form-data" asp-controller="SalePost" asp-action="Post" method="post">
-        <div class="form-group col-12 mb-3 text-center">
-            <label class="form-label mt-4 fs-4">Choose up to 10 photos</label>
-            <input class="form-control" type="file" asp-for="Images" multiple>
-            @if (Model.ImagesErrorMessage != null)
-            {
-                <span class="text-danger fs-4">@Model.ImagesErrorMessage</span>
-            }
+        <div class="row text-center mt-3">
+            <span class="fs-3">Choose up to 10 photos</span>
+            <div class="form-group col-5 mb-3 text-center">
+                <label asp-for="ThumbnailImage" class="form-label fs-4">Thumbnail photo</label>
+                <input class="form-control" asp-for="ThumbnailImage" type="file" required>
+                @if (Model.ImagesErrorMessage != null)
+                {
+                    <span class="text-danger fs-4">@Model.ImagesErrorMessage</span>
+                }
+            </div>
+            <div class="form-group col-7 mb-3 text-center">
+                <label asp-for="Images" class="form-label fs-4">Photos</label>
+                <input class="form-control" asp-for="Images" type="file" multiple>
+                @if (Model.ImagesErrorMessage != null)
+                {
+                    <span class="text-danger fs-4">@Model.ImagesErrorMessage</span>
+                }
+            </div>
         </div>
         <div class="row col-lg-13">
             <div class="mb-3 col-4">
@@ -57,14 +68,9 @@
                 </select>
             </div>
             <div class="mb-3 col-4">
-                <label asp-for="ProvinceId" class="form-label fs-4">Province</label>
-                <select asp-for="ProvinceId" class="form-select" required>
-                    <option value="" selected disabled>Select a province</option>
-                    @foreach (var item in Model.Provinces!)
-                    {
-                        <option value="@item.Id">@item.ProvinceName</option>
-                    }
-                </select>
+                <label asp-for="EuroStandart" class="form-label fs-4">Euro</label>
+                <input type="number" asp-for="EuroStandart" class="form-control" value="@((Model.EuroStandart != 0) ? Model.EuroStandart : null)" placeholder="e.g., 2, 3" required>
+                <span asp-validation-for="EuroStandart" class="text-danger"></span>
             </div>
         </div>
         <div class="row col-lg-13">
@@ -75,15 +81,28 @@
                 <span asp-validation-for="EngineDisplacement" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
-                <label class="form-label fs-4" asp-for="EngineFuelType">Fuel</label>
-                <input type="text" class="form-control" asp-for="EngineFuelType" placeholder="e.g., Petrol, Diesel, Hybrid" required>
-                <span asp-validation-for="EngineFuelType" class="text-danger"></span>
+                <label asp-for="EngineFuelType" class="form-label fs-4">Fuel</label>
+                <select asp-for="EngineFuelType" class="form-select" required>
+                    <option value="" selected disabled>Select a fuel type</option>
+                    <option value="Petrol">Petrol</option>
+                    <option value="Diesel">Diesel</option>
+                    <option value="Hybrid">Hybrid</option>
+                    <option value="Electric">Electric</option>
+                </select>
             </div>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="EngineHorsePower">Horsepower</label>
                 <input type="number" class="form-control" asp-for="EngineHorsePower" value="@((Model.EngineHorsePower != 0) ? Model.EngineHorsePower : null)" min=0 max="9999" placeholder="e.g., 120, 170" required>
                 <span asp-validation-for="EngineHorsePower" class="text-danger"></span>
             </div>
+        </div>
+        <div class="mb-3">
+            <label asp-for="TransmissionType" class="form-label fs-4">Transmission</label>
+            <select asp-for="TransmissionType" class="form-select" required>
+                <option value="" selected disabled>Select a transmission</option>
+                <option value="Manual">Manual</option>
+                <option value="Automatic">Automatic</option>
+            </select>
         </div>
         <div class="mb-3">
             <label asp-for="Price" class="form-label fs-4">Price</label>
@@ -94,21 +113,6 @@
             <label asp-for="Odometer" class="form-label fs-4">Odometer/Kilometers</label>
             <input type="number" asp-for="Odometer" class="form-control" value="@((Model.Odometer != 0) ? Model.Odometer : null)" placeholder="e.g., 170000, 250000" required>
             <span asp-validation-for="Odometer" class="text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="City" class="form-label fs-4">City</label>
-            <input type="text" asp-for="City" class="form-control" placeholder="e.g., Ruse, Sofia, Plovdiv">
-            <span asp-validation-for="City" class="text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="TransmissionType" class="form-label fs-4">Transmission</label>
-            <input type="text" asp-for="TransmissionType" class="form-control" placeholder="e.g., Manual, Automatic">
-            <span asp-validation-for="TransmissionType" class="text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="EuroStandart" class="form-label fs-4">Euro</label>
-            <input type="number" asp-for="EuroStandart" class="form-control" value="@((Model.EuroStandart != 0) ? Model.EuroStandart : null)" placeholder="e.g., 2, 3" required>
-            <span asp-validation-for="EuroStandart" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="VinNumber" class="form-label fs-4">VinNumber</label>
