--- a/CarMarketplace.Web/Views/Seller/BecomeProvider.cshtml
+++ b/CarMarketplace.Web/Views/Seller/BecomeProvider.cshtml
@@ -18,6 +18,11 @@
         <input asp-for="PhoneNumber" class="form-control" required>
         <span asp-validation-for="PhoneNumber" class="text-danger fs-4"></span>
     </div>
+    <div class="mb-3">
+        <label asp-for="City" class="form-label fs-4"></label>
+        <input asp-for="City" class="form-control" required>
+        <span asp-validation-for="City" class="text-danger fs-4"></span>
+    </div>
     <div class="d-grid col-2 mx-auto float-start mt-2">
         <input type="submit" class="btn btn-primary mt-2 fs-4">
     </div>
