--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using CarMarketplace.Web.ViewModels;
 @using CarMarketplace.Services.Contracts;
 @using CarMarketplace.Web.ViewModels.User;
+@using CarMarketplace.Web.ViewModels.Lender;
 @using CarMarketplace.Web.ViewModels.Common;
 @using CarMarketplace.Web.ViewModels.Seller;
 @using CarMarketplace.Web.ViewModels.Catalog;
